configurations/configmap-als-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: linkedin-configmap-env
spec:
  containers:
    - name: busybox
      image: busybox:latest
      command: ["/bin/sh", "-c", "env && sleep 3600"]
