configurations/env-parameters.yaml
apiVersion: v1
kind: Pod
metadata:
  name: linkedin-env-demo
spec:
  containers:
    - name: busybox
      image: busybox:latest
      command: ["/bin/sh", "-c", "env && sleep 3600"]
