configurations/limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: linkedin-limits
spec:
  containers:
  - name: stress-ng
    image: apline:latest
    command:
      - sh
      - -c
      - |
        apk add --no-cache stress-ng && \
        stress-ng --vm 1 --vm-bytes 200M --timeout 300s
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
