configurations/pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: linkedin-pod
spec:
    containers:
    - name: linkedin-container
      image: busybox
      command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 1800']
