configurations/secret-als-datei.yaml
apiVersion: v1
kind: Pod
metadata:
  name: linkedin-secrets-file
spec:
  containers:
    - name: busybox
      image: busybox:latest
      command: ["/bin/sh", "-c", "ls /etc/secrets && sleep 3600"]
      volumeMounts:
        - name: secret-volume
          mountPath: /etc/secrets
  volumes:
    - name: secret-volume
      secret:
        secretName: linkedin-secret
