configurations/timer-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: linkedin-timer-pod
spec:
    containers:
    - name: linkedin-timer-container
      image: busybox:latest
      command: ['sh', '-c', 'for i in $(seq 1 1800); do echo $(date) && sleep 1; done']
